Issue-36  Correct responsive style for front page slider on mobile

--- a/web/themes/custom/lesnik/sass/_slider.scss
+++ b/web/themes/custom/lesnik/sass/_slider.scss
@@ -12,9 +12,6 @@
   .paragraph--type--front-page-galery {
     position: relative;
     .field--name-field-link {
-      @include devices(mobile){
-        display:none;
-      }
       position: absolute;
       bottom: 30%;
       left: 10%;
